--- a/manifest_FortiClientVPN_7.4.9.plist
+++ b/manifest_FortiClientVPN_7.4.9.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://valesavi-hub.github.io/ipa_ota/FortiClientVPN_7.4.9.ipa</string>
+					<string>https://vs-git-hub.github.io/ipa_ota/FortiClientVPN_7.4.9.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
